--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
-<%= settings.bakery.muffins["Cranberry-Orange Muffin"].description %>
+<h1><%= settings.bakery.muffins["Cranberry-Orange Muffin"].description %></h1>
+
+
+    <div class="parallax-container">
+      <div class="parallax"><img src="dough.jpeg"></div>
+    </div>
