added image of each baked good as a class attribute. Tested in html and rendering

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,7 @@
 <h1><%= settings.bakery.muffins["Cranberry-Orange Muffin"].description %></h1>
 
+<img src="<%= settings.bakery.muffins["Cranberry-Orange Muffin"].image %>">
+
 
     <div class="parallax-container">
       <div class="parallax"><img src="dough.jpeg"></div>
