--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,72 @@
-<h1><%= settings.bakery.muffins["Cranberry-Orange Muffin"].description %></h1>
+<div class="parallax-container">
+  <div id="nav-container">
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="/">Home</a></li>    
+      <li class="divider"></li>
+      <li><a href="/about">About</a></li>
+      <li class="divider"></li>
+      <li><a href="/treats">All</a></li>
+      <li class="divider"></li>
+      <li><a href="/cookies">Cookies</a></li>
+      <li><a href="/cakes">Cakes</a></li>
+      <li><a href="muffins">Muffins</a></li>
+    </ul>
+    <ul id="dropdown1" class="dropdown-content">
+      <li><a href="/treats">All</a></li>
+      <li class="divider"></li>
+      <li><a href="/cookies">Cookies</a></li>
+      <li><a href="/cakes">Cakes</a></li>
+      <li><a href="muffins">Muffins</a></li>
+    </ul>
+    <nav id="nav">
+      <div class="nav-wrapper">
+<!--         <a href="/" class="brand-logo display-3">Coffee, Wake n' Cake</a> -->
+        <ul class="left hide-on-med-and-down">
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <!-- Dropdown Trigger -->
+          <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Menu<i class="material-icons left">arrow_drop_down</i></a></li>
+        </ul>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  
+  </div>
+  <h1 class="display-1 white-text title" id="heading-1">Coffee, Wake n' Cake</h1>
+  <div class="parallax"><img src="dough.jpeg"></div>
+</div>
+<div class="container">
+  <p class="display-1">At Coffee, Wake n' Bake, our secret to quality is to keep it simple: we only use the best organic ingredients to make healthy and delicious products. We stand by our promise to never use artificial flavors, sweeteners, colors, or preservatives. Our products deliver not only nutrition, but delicious flavors and textures your whole family will love.</p>
+</div>
+<div class="parallax-container">
+  <div class="parallax"><img src="hand3.jpeg"></div>
+</div>
 
-<img src="<%= settings.bakery.muffins["Cranberry-Orange Muffin"].image %>">
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
+<div class="parallax-container">
+  <div class="parallax"><img src="rolling.jpeg"></div>
+</div>
 
-    <div class="parallax-container">
-      <div class="parallax"><img src="dough.jpeg"></div>
-    </div>
+<div class="container">
+  <p>Started in 2016 in her own kitchen, Alexandra Cooper began selling her treats to customers from her bartending job. Word of mouth spread - and her business slowly grew. Because of her passion to try new techniques and develop new recipes - the first question asked of each new customer was, "What do you love? I want to figure out how to make it.". Driven by her curiosity, a reputation of unyielding customer service took her business out of her kitchen and into a shop of her own.</p>
+</div>
+
+<div class="parallax-container">
+  <div class="parallax"><img src="dough2.jpeg"></div>
+</div>
+<!-- the witching flour
+Fondante's Inferno
+Oven Lovin'
+There's Nothing Batter
+Buns in the Oven
+Tokens of my Confection
+Tiers of Joy
+Flour Play
+Mad Batters
+Coffee, Wake 'n Cake -->
