--- a/public/main.css
+++ b/public/main.css
@@ -20,4 +20,12 @@ div.nav-wrapper {
 .title {
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 9px black, 0px 9px 22px rgba(255, 255, 255, 0.7); }
 
+.carousel .carousel-item {
+  height: 100%;
+  width: auto; }
+
+.carousel .carousel-item .carousel-pic {
+  height: 80%;
+  width: auto; }
+
 /*# sourceMappingURL=main.css.map */
