--- a/public/main.scss
+++ b/public/main.scss
@@ -30,3 +30,15 @@ div.nav-wrapper {
                0px 8px 9px black, 
                0px 9px 22px rgba(255, 255, 255, 0.7)
 }
+
+.carousel .carousel-item {
+  height: 100%;
+  width: auto;
+}
+
+.carousel .carousel-item .carousel-pic {
+  height: 80%;
+  width: auto;
+}
+
+
