muffin page changed from cards to parallax

--- a/views/treats.erb
+++ b/views/treats.erb
@@ -32,11 +32,11 @@
     </nav>
   
   </div>
-  <h1 class="display-1 white-text title" id="heading-1">Coffee, Wake n' Cake</h1>
+  <h1 class="display-1 white-text title">Coffee, Wake n' Cake</h1>
   <div class="parallax"><img src="baked.jpg"></div>
 </div>
 
-<h1 class="display-1 center-align" id="heading-1">Our Current Menu</h1>
+<h1 class="display-1 center-align">Our Current Menu</h1>
 
 <div class="carousel">
   <% settings.bakery.inventory.keys.each do |bakedgood|%>
