--- a/views/cakes.erb
+++ b/views/cakes.erb
@@ -1,1 +1,27 @@
 <h1>Cakes Page</h1>
+
+<div class="parallax-container">
+  <div class="parallax"><img src="rolling.jpeg"></div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <% settings.bakery.muffins.values.each do |muffin|%>
+      <div class="col s4">
+        <div class="card small">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="<%= muffin.image %>">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4"><%= muffin.type %><span class="right-align right"><%= muffin.price %></span></span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4"><%= muffin.type %><i class="material-icons right">close</i></span>
+            <p><%= muffin.description %></p>
+            <p><%= muffin.price %></p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
