mirror style of muffins for cookies and cakes

--- a/views/cakes.erb
+++ b/views/cakes.erb
@@ -1,27 +1,57 @@
-<h1>Cakes Page</h1>
-
 <div class="parallax-container">
-  <div class="parallax"><img src="rolling.jpeg"></div>
+  <div id="nav-container">
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="/">Home</a></li>    
+      <li class="divider"></li>
+      <li><a href="/about">About</a></li>
+      <li class="divider"></li>
+      <li><a href="/treats">All</a></li>
+      <li class="divider"></li>
+      <li><a href="/cookies">Cookies</a></li>
+      <li><a href="/cakes">Cakes</a></li>
+      <li><a href="muffins">Muffins</a></li>
+    </ul>
+    <ul id="dropdown1" class="dropdown-content">
+      <li><a href="/treats">All</a></li>
+      <li class="divider"></li>
+      <li><a href="/cookies">Cookies</a></li>
+      <li><a href="/cakes">Cakes</a></li>
+      <li><a href="muffins">Muffins</a></li>
+    </ul>
+    <nav id="nav">
+      <div class="nav-wrapper">
+<!--         <a href="/" class="brand-logo display-3">Coffee, Wake n' Cake</a> -->
+        <ul class="left hide-on-med-and-down">
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <!-- Dropdown Trigger -->
+          <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Menu<i class="material-icons left">arrow_drop_down</i></a></li>
+        </ul>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  
+  </div>
+  <h1 class="display-1 white-text title">Coffee, Wake n' Cake</h1>
+  <div class="parallax"><img src="baked.jpg"></div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <% settings.bakery.muffins.values.each do |muffin|%>
-      <div class="col s4">
-        <div class="card small">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="<%= muffin.image %>">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4"><%= muffin.type %><span class="right-align right"><%= muffin.price %></span></span>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4"><%= muffin.type %><i class="material-icons right">close</i></span>
-            <p><%= muffin.description %></p>
-            <p><%= muffin.price %></p>
-          </div>
-        </div>
-      </div>
-    <% end %>
+<h1 class="display-1 center-align">Cakes</h1>
+<h3 class="display-1 center-align">Cake quote here</h3>
+
+<% settings.bakery.cakes.values.each do |cake|%>
+  <div class="parallax-container">
+    <div class="parallax"><img src="<%= cake.image %>"></div>
   </div>
-</div>
+  <div class="container">
+    <h3><%= cake.type %></h1>
+  </div>
+  <div class="container">
+    <p><%= cake.description %></p>
+    <p><%= cake.price %></p>
+  </div>
+<% end %>
+
+
+
+
