--- a/views/muffins.erb
+++ b/views/muffins.erb
@@ -37,6 +37,7 @@
 </div>
 
 <h1 class="display-1 center-align">Muffins</h1>
+<h3 class="display-1 center-align">Muffin quote here</h3>
 
 <% settings.bakery.muffins.values.each do |muffin|%>
   <div class="parallax-container">
