add individual header photos for each baked good type. Style each photo for individual items. Other styles

--- a/views/about.erb
+++ b/views/about.erb
@@ -1,4 +1,4 @@
-
+<div class="parallax-container">
   <div id="nav-container">
     <ul class="sidenav" id="mobile-demo">
       <li><a href="/">Home</a></li>    
@@ -19,7 +19,7 @@
       <li><a href="muffins">Muffins</a></li>
     </ul>
     <nav id="nav">
-      <div class="nav-wrapper blue-grey darken-4">
+      <div class="nav-wrapper">
 <!--         <a href="/" class="brand-logo display-3">Coffee, Wake n' Cake</a> -->
         <ul class="left hide-on-med-and-down">
           <li><a href="/">Home</a></li>
@@ -32,6 +32,9 @@
     </nav>
   
   </div>
+  <h1 class="display-1 white-text title">Coffee, Wake n' Cake</h1>
+  <div class="parallax"><img src="hands4.jpeg"></div>
+</div>
 
 <div class="container">
   <h1>About Page</h1>
@@ -77,4 +80,7 @@
       </div>
     </form>
   </div>
+</div>
+<div class="parallax-container">
+  <div class="parallax"><img src="bread.jpg"></div>
 </div>
