--- a/views/muffins.erb
+++ b/views/muffins.erb
@@ -33,7 +33,7 @@
   
   </div>
   <h1 class="display-1 white-text title">Coffee, Wake n' Cake</h1>
-  <div class="parallax"><img src="baked.jpg"></div>
+  <div class="parallax"><img src="muffins.jpg"></div>
 </div>
 
 <h1 class="display-1 center-align">Muffins</h1>
