--- a/public/main.css
+++ b/public/main.css
@@ -18,6 +18,7 @@ div.nav-wrapper {
   background-color: transparent; }
 
 .title {
+  margin: 0 0.9%;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 9px black, 0px 9px 22px rgba(255, 255, 255, 0.7); }
 
 .carousel .carousel-item {
@@ -27,5 +28,14 @@ div.nav-wrapper {
 .carousel .carousel-item .carousel-pic {
   height: 80%;
   width: auto; }
+
+div#nav-container2 {
+  height: 25%; }
+
+div#nav-wrapper2 {
+  height: 25%; }
+
+nav#nav2 {
+  height: 100%; }
 
 /*# sourceMappingURL=main.css.map */
