--- a/public/main.scss
+++ b/public/main.scss
@@ -26,6 +26,7 @@ div.nav-wrapper {
 }
 
 .title {
+  margin: 0 0.9%;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 
                0px 8px 9px black, 
                0px 9px 22px rgba(255, 255, 255, 0.7)
@@ -39,6 +40,18 @@ div.nav-wrapper {
 .carousel .carousel-item .carousel-pic {
   height: 80%;
   width: auto;
+}
+
+div#nav-container2 {
+  height: 25%;
+}
+
+div#nav-wrapper2 {
+  height: 25%;
+}
+
+nav#nav2 {
+  height: 100%;
 }
 
 
