--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -33,7 +33,7 @@
   
   </div>
   <h1 class="display-1 white-text title">Coffee, Wake n' Cake</h1>
-  <div class="parallax"><img src="baked.jpg"></div>
+  <div class="parallax"><img src="cookies3.jpeg"></div>
 </div>
 
 <h1 class="display-1 center-align">Cookies</h1>
