refactored classes to create parent class. Added quotes

--- a/views/cakes.erb
+++ b/views/cakes.erb
@@ -37,7 +37,7 @@
 </div>
 
 <h1 class="display-1 center-align">Cakes</h1>
-<h3 class="display-1 center-align">Cake quote here</h3>
+<h3 class="display-1 center-align"><em>"Let's face it, a nice creamy chocolate cake does a lot for a lot of people; it does for me."<br><span class="grey-text">- Audrey Hepburn</em></span></h3>
 
 <% settings.bakery.cakes.values.each do |cake|%>
   <div class="parallax-container">
