--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -37,7 +37,7 @@
 </div>
 
 <h1 class="display-1 center-align">Cookies</h1>
-<h3 class="display-1 center-align">Cookie quote here</h3>
+<h3 class="display-1 center-align"><em>"People have got to learn: if they don't have cookies in the cookie jar, they can't eat cookies."<br><span class="grey-text">-Suze Orman</em></span></h3>
 
 <% settings.bakery.cookies.values.each do |cookie|%>
   <div class="parallax-container">
