--- a/views/muffins.erb
+++ b/views/muffins.erb
@@ -37,7 +37,7 @@
 </div>
 
 <h1 class="display-1 center-align">Muffins</h1>
-<h3 class="display-1 center-align">Muffin quote here</h3>
+<h3 class="display-1 center-align"><em>"The middle child of baked goods."<br><span class="grey-text">- Said no one ever.</span></em></h3>
 
 <% settings.bakery.muffins.values.each do |muffin|%>
   <div class="parallax-container">
