--- a/views/treats.erb
+++ b/views/treats.erb
@@ -50,7 +50,7 @@
   <div class="row">
     <% settings.bakery.inventory.keys.each do |bakedgood|%>
       <% settings.bakery.inventory[bakedgood].values.each do |item|%>
-        <div class="col s4">
+        <div class="col s12 m4">
           <div class="card small">
             <div class="card-image waves-effect waves-block waves-light">
               <img class="activator" src="<%= item.image %>">
