add paragraph description

--- a/views/index.erb
+++ b/views/index.erb
@@ -41,14 +41,9 @@
 <div class="parallax-container">
   <div class="parallax"><img src="hand3.jpeg"></div>
 </div>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+<div class="container">
+  <p>Life is hard. Some days, it seems the world is trying its utmost to keep you down. At Coffee, Wake n' Bake, we can't solve life's problems. But for one sweet, sweet moment - let us get you high. It is our solemn promise to each of our customers, that we will do our utmost to raise you up higher than any cake, bread or pastry; to a better place (one with chocolate).</p>
+</div>
 <div class="parallax-container">
   <div class="parallax"><img src="rolling.jpeg"></div>
 </div>
@@ -60,7 +55,9 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <div class="parallax-container">
   <div class="parallax"><img src="dough2.jpeg"></div>
 </div>
-<!-- the witching flour
+<!-- 
+Name Options:
+The witching flour
 Fondante's Inferno
 Oven Lovin'
 There's Nothing Batter
