--- a/views/about.erb
+++ b/views/about.erb
@@ -1,7 +1,7 @@
 <div class="parallax-container">
   <div id="nav-container">
     <ul class="sidenav" id="mobile-demo">
-      <li><a href="/">Home</a></li>    
+      <li><a href="/">Home</a></li>
       <li class="divider"></li>
       <li><a href="/about">About</a></li>
       <li class="divider"></li>
@@ -30,7 +30,7 @@
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       </div>
     </nav>
-  
+
   </div>
   <h1 class="display-1 white-text title">Coffee, Wake n' Cake</h1>
   <div class="parallax"><img src="hands4.jpeg"></div>
@@ -73,7 +73,7 @@
           <label for="icon_favorite">What do you love? I want to figure out how to make it.</label>
         </div>
         <div class="input-field col s2">
-          <button data-target="modal1" class="btn waves-effect modal-trigger waves-light" type="submit" name="action">Submit
+          <button class="btn waves-effect modal-trigger waves-light" type="submit" name="action">Submit
             <i class="material-icons right">send</i>
           </button>
         </div>
